--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -6,8 +6,24 @@ body,
 }
 
 body {
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
-    Microsoft YaHei, Arial, sans-serif;
+  font-family: Microsoft YaHei, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+     Arial, sans-serif;
+}
+
+.sideBar .el-submenu__title {
+  padding: 0 !important;
+  color: rgb(191, 203, 217);
+}
+.sideBar>.el-menu-item {
+  padding: 0 !important;
+}
+
+ .el-menu-item {
+  color: rgb(191, 203, 217);
+}
+
+.sideBar .el-tooltip {
+  padding: 0 !important;
 }
 
 * {
